fixed overflow for calendar

--- a/components/BlockBuilder.module.scss
+++ b/components/BlockBuilder.module.scss
@@ -31,7 +31,7 @@
   gap: 1rem;
 
   @media (max-width: 1050px) {
-    overflow: scroll;
+    overflow: hidden;
   }
 }
 
