--- a/components/Schedule.module.scss
+++ b/components/Schedule.module.scss
@@ -291,3 +291,8 @@
     display: none;
   }
 }
+
+.scheduleWrapper {
+  overflow: scroll;
+  width: 100%;
+}
